--- a/index.html
+++ b/index.html
@@ -151,6 +151,12 @@
     </main>
 
     <script src="./script.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/emailjs-com@3/dist/email.min.js"></script>
+    <script>
+      (function() {
+        emailjs.init("eNCD_WQ0tYQrU9_44");
+      })();
+    </script>
   </body>
 </html>
 
