--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
           <button class="envelope" id="envelopeButton" type="button" aria-label="Open letter">
             <div class="envelope-back"></div>
             <div class="envelope-letter">
-              <p class="envelope-to">For Ms. Gurleen Kaur 💕</p>
+              <p class="envelope-to">For My Bestie 💕</p>
             </div>
             <div class="envelope-flap"></div>
             <div class="envelope-stamp">
@@ -58,7 +58,7 @@
                 <p class="letter-date">Feb 14 • To my favourite human</p>
               </header>
               <article class="letter-body">
-                <p>Dear Ms. Gurleen Kaur,</p>
+                <p>Dear Bestie,</p>
                 <p>
                   You are officially invited to be my forever chaos partner,<br />
                   snack buddy, and emotional support human.
