--- a/index.html
+++ b/index.html
@@ -84,8 +84,8 @@
               <img
                 id="friendPhoto"
                 class="friend-photo"
-                src="./Gurleen.png"
-                alt="Gurleen"
+                src="./sad-kitty.png"
+                alt="sad-kitty"
               />
 
               <p class="celebrate-line-sub">
