--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <button class="envelope" id="envelopeButton" type="button" aria-label="Open letter">
           <div class="envelope-back"></div>
           <div class="envelope-letter">
-            <p class="envelope-to">For Ms. Gurleen Kaur 💕</p>
+            <p class="envelope-to">For My Bestie 💕</p>
           </div>
           <div class="envelope-flap"></div>
           <div class="envelope-stamp">
@@ -51,7 +51,7 @@
               <p class="letter-date">Feb 14 • To my favourite human</p>
             </header>
             <article class="letter-body">
-              <p>Dear Ms. Gurleen Kaur,</p>
+              <p>Dear Bestie,</p>
               <p>
                 You are officially invited to be my forever chaos partner,<br />
                 snack buddy, and emotional support human.
@@ -74,7 +74,7 @@
               YAYYY! Best Galentine secured 💕✨
             </p>
 
-            <img id="friendPhoto" class="friend-photo" src="./Gurleen.png" alt="Gurleen" />
+            <img id="friendPhoto" class="friend-photo" src="./sad-kitty.png" alt="Gurleen" />
 
             <p class="celebrate-line-sub">
               Screenshot this and send it to me so we can plan snacks, gossip, and the perfect Galentine’s date.
